# city_learn_2023

./: .gitignore  README.md  current_sac_encoder.pth  hello.py  jobscript.sh  jobscript_all.sh  jobscript_single.sh  pyproject.toml  slurm-14575740.out  slurm-14575742.out
data/: MANIFEST.TXT
data/citylearn_challenge_2023_phase_1/: schema.json
data/citylearn_challenge_2023_phase_2_local_evaluation/: schema.json
data/citylearn_challenge_2023_phase_2_online_evaluation_1/: schema.json
data/citylearn_challenge_2023_phase_2_online_evaluation_2/: schema.json
data/citylearn_challenge_2023_phase_2_online_evaluation_3/: schema.json
data/citylearn_challenge_2023_phase_3_1/: schema.json
notebooks/: data_analysis.ipynb  environment_setup.ipynb  meta_test.ipynb  test_sac.ipynb
old/: all_experiments.py  decentralized_sac_experiments.py  random_rewards.py  sac_experiments.py
src/: all_experiments.py  centralized_sac_experiments.py  decentralized_sac_experiments.py  main.py  main_copy.py  maml_experiments.py  maml_test.py  maml_test2.py  mata(sac_encoder_test).py  mata.py  pca.ipynb  random_rewards.py  reward_function.py  sac_experiments.py  test_decentral_sac.py  test_sac.ipynb  test_sac.py  test_sac_agents.py  train_encdec.py  utils.py
src/agents/: autoencoder.py  base_agent.py  maml.py  maml2.py  random_agent.py  random_encoder.py  sac.py  sac_encoder.py
src/agents/base_models/: sac.py
src/experiment_runners/: centralized_sac_experiments.py  experiment_runner.py  maml_experiments.py
src/utils/: plotting.py  replay_buffer.py  reward_function.py
(+4 files in other folders)
