[project]
name = "city-learn-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "citylearn==2.1b9",
    "ipykernel>=6.29.5",
    "numpy==1.26.4",
    "pandas>=1.3.5",
    "shimmy>=2.0.0",
    "stable-baselines3>=2.4.0",
    "wandb>=0.18.7",
]

[tool.ruff]
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "ANN", "D", "F", "I"]
ignore = ["ANN101","ANN102","D100", "D101","D2","D4","ANN002","ANN003", "E501", "ANN401", "D104"]
